# Reaction-resonance-eframe

./: .gitignore  Cargo.toml  Planned features.rtf  README.md  build-wasm.sh  build.rs  build_android.sh  build_wasm.sh  build_windows.sh  cargo_clippy.sh  index.html  run_android.sh  rust-toolchain.toml  share_phone_screen.sh
.cargo/: config.toml
dependencies/egui_colorgradient/: Cargo.toml  README.md
dependencies/egui_colorgradient/src/: cache.rs  gradient.rs  lib.rs
dependencies/egui_dialogs/: Cargo.toml
dependencies/egui_dialogs/src/: standard_dialog.rs
materials/: liquid.json  plasma.json  powder.json  solid.json
src/: app.rs  burning_reaction.json  categories.json  chemistry.rs  dialogs.rs  egui_input.rs  http_request.rs  included_files.rs  lib.rs  life.rs  life_reactions.rs  locale.rs  main.rs  material.rs  material_ids.json  mingling_reactions.json  neighbour_reactions.rs  new.json  particle.rs  phase_transition.json  physics.rs  reactions.rs  system_data.rs  system_ui.rs  world.rs
src/assets/: icon_falling_sand.icns
src/assets/res/mipmap-anydpi-v26/: reaction_resonance.xml
src/assets/res/values/: reaction_resonance_background.xml
src/chemistry/: chemical_reactions_burning.json  chemical_reactions_fuels.json  chemical_reactions_mingling.json
src/disabled_elements/: liquid.json  plasma.json  powder.json  solid.json
src/locale/: default_locale.json  locale_en.json  locale_hu.json  locale_sk.json
src/materials/: gas.json  life.json  liquid.json  plasma.json  powder.json  solid.json  void.json
src/physics/: phase_transitions.json  phase_transitions_boiling.json  phase_transitions_melting.json  phase_transitions_sublimation.json
