[package]
name = "reaction-resonance-eframe"
version = "0.1.1"
edition = "2024"

[lib]
# cdylib is required for Android, lib is required for desktop
crate-type = ["cdylib", "lib"]

[dependencies]
android_logger = "0.15.1"
eframe = { version = "0.33.3", default-features = false, features = ["android-native-activity", "glow", "persistence", "wayland"] }
egui = { version = "0.33.3", features = ["serde"] }
ehttp = "0.6.0"
env_logger = "0.11.6"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
grid = { version = "1.0.0", features = ["serde"] }
log = "0.4.25"
quadtree = "0.5.0"
rand = "0.9.2"
rand_core = "0.9.3"
rayon = "1.10.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.0", features = ["sync"] }
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.51"
web-sys = { version = "0.3.77", features = ["Element", "Document", "Window", "OrientationLockType", "Screen", "ScreenOrientation", "RequestInit", "Request", "Headers", "ReferrerPolicy"] }
wide = "1.1.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }

# Profile options:
# opt-level = 'z' - optimize for size
# opt-level = 's' - optimize for performance
# Note that, surprisingly enough, opt-level = "s" can sometimes result in smaller binaries than opt-level = "z". Always measure!
# lto = true - performance improvement, but very long compile time
# strip = true  # Automatically strip symbols from the binary.

# FOR APKS - dev profile builds an apk
[profile.dev]
debug = true
#opt-level = "z"  # Optimize for size.
#lto = true
#codegen-units = 1

[profile.release]
opt-level = 's'
#lto = true
codegen-units = 1

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
