[package]
name = "reaction-resonance-eframe"
version = "0.1.1"
edition = "2024"

[lib]
# cdylib is required for Android, lib is required for desktop
crate-type = ["cdylib", "lib"]

[dependencies]
ahash = { version = "0.8.12", features = ["no-rng"] }
android_logger = "0.15.1"
crossbeam = "0.8.4"
eframe = { version = "0.33.3", default-features = false, features = ["android-native-activity", "glow", "persistence", "wayland"] }
egui = { version = "0.33.3", features = ["serde"] }
egui-colorgradient = { version = "0.2.3", path = "../egui-colorgradient/egui-colorgradient" }
egui_dialogs = { git = "https://github.com/Gyorgy0/egui_dialogs.git", version = "0.3.7" }
egui_extras = { version = "0.33.3", features = ["all_loaders", "svg"] }
ehttp = "0.6.0"
env_logger = "0.11.6"
exr = "1.74.0"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
gif = "0.14.1"
image = "0.25.9"
log = "0.4.25"
quadtree = "0.5.0"
rand = "0.10.0"
rand_core = "0.10.0"
rayon = "1.10.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.0", features = ["sync"] }
wasm-bindgen = "0.2.109"
wasm-bindgen-futures = "0.4.59"
web-sys = { version = "0.3.77", features = ["Element", "Document", "Window", "OrientationLockType", "Screen", "ScreenOrientation", "RequestInit", "Request", "Headers", "ReferrerPolicy"] }
wide = "1.1.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }

# Profile options:
# opt-level = 'z' - optimize for size
# opt-level = 's' - optimize for performance
# Note that, surprisingly enough, opt-level = "s" can sometimes result in smaller binaries than opt-level = "z". Always measure!
# lto = true - performance improvement, but very long linking time
# strip = true  # Automatically strip symbols from the binary.

# FOR APKS - dev profile builds an apk
[profile.dev]
debug = true
#strip = true
opt-level = "s"
#lto = true
codegen-units = 1

[profile.release]
opt-level = 's'
debug = true
strip = false
#lto = "fat"
panic = "abort"
codegen-units = 1

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
label = "Reaction resonance"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[package.metadata.android.application]
theme = "@android:style/Theme.NoTitleBar.Fullscreen"
label = "Reaction resonance"
supportsRtl="true"

[package.metadata.android.application.activity]
config_changes="orientation|screenSize"
#orientation = "landscape"
exported = true
immersive = true
