[package]
name = "reaction-resonance-eframe"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"

[workspace]
resolver = "3"
members = ["dependencies/egui_dialogs", "dependencies/egui_colorgradient"]

[lib]
# cdylib is required for Android, lib is required for desktop
crate-type = ["cdylib", "lib"]

[workspace.dependencies]
eframe = { version = "0.34.0", default-features = false, features = ["android-native-activity", "glow", "persistence", "wayland"] }
egui = { version = "0.34.1", features = ["serde"] }
egui_extras = { version = "0.34.1", features = ["all_loaders", "svg"] }

[dependencies]
eframe = { version = "0.34.0", default-features = false, features = ["android-native-activity", "glow", "persistence", "wayland"] }
egui = { version = "0.34.0", features = ["serde"] }
egui_extras = { version = "0.34.0", features = ["all_loaders", "svg"] }
android_logger = "0.15.1"
env_logger = "0.11.10"
exr = "1.74.0"
getrandom = { version = ">=0.4.2", features = ["std", "wasm_js"] }
gif = "0.14.1"
image = "0.25.9"
js-sys = "0.3.94"
log = "0.4.25"
rand = "0.10.0"
rand_core = "0.10.0"
rayon = "1.10.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = "0.28.0"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.67"
web-sys = { version = "0.3.77", features = ["Element", "Document", "Window", "OrientationLockType", "Screen", "ScreenOrientation", "RequestInit", "Request", "Headers", "ReferrerPolicy"] }
winit = { version = "0.30.12", features = ["android-native-activity"] }
egui_dialogs = { version = "0.3.7", path = "dependencies/egui_dialogs" }
egui-colorgradient = { version = "0.2.3", path = "dependencies/egui_colorgradient" }
wasm-bindgen-rayon = "1.3.0"

# Profile options:
# opt-level = 'z' - optimize for size
# opt-level = 's' - optimize for performance
# Note that, surprisingly enough, opt-level = "s" can sometimes result in smaller binaries than opt-level = "z". Always measure!
# lto = true - performance improvement, but very long linking time
# strip = true  # Automatically strip symbols from the binary.

# FOR APKS - dev profile builds an apk
[profile.dev]
debug = false
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
opt-level = 's'
debug = false
strip = true
#lto = "fat"
panic = "abort"
codegen-units = 1

[build-dependencies]
winresource = "0.1.31"

# Android APK options

[package.metadata.android]
apk_name = "reaction_resonance"
resources = "src/assets/res"
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
label = "Reaction resonance"
strip = "strip"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 35

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
icon = "@mipmap/reaction_resonance"
label = "Reaction resonance"
supportsRtl="true"

[package.metadata.android.application.activity]
config_changes="orientation|screenSize"
orientation = "landscape"
immersive = true

# Cargo bundle settings
[package.metadata.bundle]
name = "Reaction resonance"
identifier = "com.gyorgy0.reaction_resonance"
resources = ["src/chemistry", "src/locale", "src/materials", "src/physics", "src/material_ids.json"]
icon = ["src/assets/icon_falling_sand_2048x2048.png", "src/assets/icon_falling_sand_2048x2048@2x.png", "src/assets/icon_falling_sand.ico"]
version = "1.0.0"
category = "Game"
short_description = "A cross-platform falling-sand game."
long_description = """
This is a cross-platform falling-sand game written in Rust,
using the egui GUI framework. Inspired by Noita, 
The Powder Toy and Powder Game it simulates the chemical
and physical reactions with elements or other natural 
forces e.g. gravity, buoyancy, viscosity, heat, etc...
"""
osx_frameworks = ["SDL2"]
osx_url_schemes = ["com.gyorgy0.reaction_resonance"]